# flash-attention

./: CMakeLists.txt  setup.py
csrc/flash_attn/: flash_api.cpp
csrc/flash_attn/src/: flash.h  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_bwd_preprocess_kernel.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  generate_kernels.py  kernel_traits.h  mask.h  relative_position_bias.h  static_switch.h  utils.h
flash_attn/: flash_attn_interface.py
